--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,6 +81,9 @@
   .bg-dark {
     background-color: #0f172a; /* Dark mode background color */
   }
+  .paused {
+    animation-play-state: paused;
+  }
 }
 
 .slide_card {
@@ -160,4 +163,8 @@
   height: 0;
   border: 0.6rem solid transparent;
   border-bottom-color: #0084ff;
+}
+.businessCardShadow {
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px,
+    rgba(17, 17, 26, 0.05) 0px 8px 32px;
 }
