--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -181,8 +181,9 @@
 }
 
 .card {
-  width: 320px;
-  height: 221px;
+  padding-top: 2px;
+  width: 220px;
+  height: 180px;
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
@@ -235,8 +236,8 @@
 }
 
 .circle {
-  width: 131px;
-  height: 131px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   background: #fff;
   border: 3px solid var(--bg-color);
@@ -251,8 +252,8 @@
 
 .circle:after {
   content: "";
-  width: 118px;
-  height: 118px;
+  width: 110px;
+  height: 110px;
   display: block;
   position: absolute;
   background: var(--bg-color);
@@ -271,8 +272,8 @@
   height: 118px;
   border-radius: 50%;
   background: var(--bg-color);
-  top: 20px;
-  left: 100px;
+  top: 6px;
+  left: 50px;
   z-index: 0;
   transition: transform 0.3s ease-out;
 }
